objects/vlocity_ins__IntegrationRetryPolicy__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaximumNumberOfRetries__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Maximum number of retries</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationItemDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Item Definition</label>
        <referenceTo>vlocity_ins__OrchestrationItemDefinition__c</referenceTo>
        <relationshipLabel>Integration Retry Policies</relationshipLabel>
        <relationshipName>IntegrationRetryPolicies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimeBetweenRetries__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Time between retries (Seconds)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Retry Policy</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Integration Retry Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Retry Policies</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__MonotonousForeverRetryPolicy</fullName>
        <active>true</active>
        <label>Monotonous Forever Retry Policy</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__MonotonousRetryPolicy</fullName>
        <active>true</active>
        <label>Monotonous Retry Policy</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__NoRetryPolicy</fullName>
        <active>true</active>
        <label>No Retry Policy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>